# apex

./: .gitignore  01-overview.md  02-features.md  03-syntax.md  04-grammar.md  05-memory-model.md  06-compilation.md  07-stdlib.md  08-examples.md  09-comparison.md  10-roadmap.md  BRANCHING_STRATEGY.md  BUG_REPORT.md  BUILD_STATUS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICKREF.md  README.md  RELEASE_NOTES_v1.0.0-alpha.2.md  STATUS.md  TODO.md  USAGE.md  build.sh  check_prereqs.sh  test.sh  test_return.apex  test_two_lets.apex
docs/: BUILD.md  KNOWN_ISSUES.md  QUICKREF.md  README.md  STATUS.md
docs/spec/: 01-overview.md  03-syntax.md  04-grammar.md  06-compilation.md  README.md
examples/: comprehensive.apx  demo.apex  demo.apx  employee_demo.apx  fibonacci.apex  fibonacci.ll  for_loop.apex  hello.apex  hello.apx  hello.ll  loops.apex  simple_for.apex  struct.apx  test_fib_simple.apex  test_for.apex  test_for_comprehensive  test_for_comprehensive.apex  test_integration.apex  test_mut_comprehensive  test_mut_comprehensive.apex  test_range_comprehensive  test_range_comprehensive.apex  test_while  test_while.apex  test_while_comprehensive  test_while_comprehensive.apex  test_while_scope.apex
src/apexc/: CMakeLists.txt  main.cpp
src/apexc/ast/: AST.h
src/apexc/codegen/: LLVMCodeGen.cpp  LLVMCodeGen.h
src/apexc/lexer/: Lexer.cpp  Lexer.h  Token.cpp  Token.h
src/apexc/parser/: Parser.cpp  Parser.h
src/apexc/sema/: SemanticAnalyzer.cpp  SemanticAnalyzer.h
tests/: RANDOM_TESTS.md  README.md  arithmetic_stress.apx  assignment  assignment.apex  assignment.apex.skip2  block_stress.apx  comparison_stress.apx  comprehensive_integration.apx  edge_large.apx  edge_negative.apx  edge_single.apx  edge_zero.apx  for_basic.apx  for_nested.apex  function_stress.apx  loop_stress.apx  match_basic.apx  match_identifier.apex  match_identifier.out  match_no_parens  match_no_parens.apex  match_stress.apx  match_wildcard.apex  mut_basic.apx  mut_multiple.apex  mutation_stress.apx  random_arithmetic_complex.apx  random_block_expressions.apx  random_comparison_mixed.apx  random_edge_cases.apx  random_function_calls.apx  random_if_else_chains.apx  random_integration_all.apx  random_loops_complex.apx  random_match_patterns.apx  random_mutation_patterns.apx  random_precedence.apx  random_recursion_deep.apx  random_struct_operations.apx  (+55 more)
